--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
+tokio = { version = "1.44.1", features = ["full"] }
