--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1.88"
 chrono = { version = "0.4.40", features = ["serde"] }
 rand = "0.9.0"
 regex = "1.11.1"
