--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.88"
 chrono = { version = "0.4.40", features = ["serde"] }
+clap = { version = "4.5.32", features = ["derive"] }
 rand = "0.9.0"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
